--- a/app.json
+++ b/app.json
@@ -10,7 +10,7 @@
     "window": {
         "backgroundTextStyle": "light",
         "navigationBarBackgroundColor": "#fff",
-        "navigationBarTitleText": "WeChat",
+        "navigationBarTitleText": "书法",
         "navigationBarTextStyle": "black"
     },
     "tabBar": {
